Hier sammeln wir Aenderungsnotizen fuer die aktuelle Firmware (seit dem letzten Release).
Im Fall eines Release dienen die Notizen zum Befüllen des Changelogs im Wiki:
 https://wiki.opennet-initiative.de/wiki/Opennet_Firmware_Versionen
Anschließend kann diese Liste wieder geleert werden.


= Änderungen aus Nutzersicht =
* Gateway-Liste: jeder Gateway ist verlinkt mit einer Karte auf der die Route vom eigenen AP zum Gateway visualisiert ist
* Fehlerkorrekturen:
** POE-Passthrough-Umschalter funktioniert nun
** UGW: Korrektur der Ermittlung und Announcierung der Uplink-Bandbreite

= Interne Änderungen =

= Bemerkenswertes / Fehler / Mängel =

= Aktualisierungshinweis =