@@ -6,6 +6,8 @@ Anschließend kann diese Liste wieder geleert werden.
 
 = Änderungen aus Nutzersicht =
 * Gateway-Liste: jeder Gateway ist verlinkt mit einer Karte auf der die Route vom eigenen AP zum Gateway visualisiert ist
+* Monitoring:
+** die Ping-Latenz zum UGW und zum VPN-Tunnel-Gateway ist via munin auswertbar
 * Fehlerkorrekturen:
 ** POE-Passthrough-Umschalter funktioniert nun
 ** UGW: Korrektur der Ermittlung und Announcierung der Uplink-Bandbreite
